--- a/index.html
+++ b/index.html
@@ -265,19 +265,14 @@
             <p>Estos libros son las fuentes primarias (indirectas) sobre su pensamiento.</p>
             <ul>
                 <li>
-                    <strong>Metafísica de Aristóteles:</strong> El Libro I (Alpha) es fundamental, ya que Aristóteles describe a Tales como el iniciador de la filosofía.
-                    <br>
-                    <a href="https://archive.org/details/metafisica_202009" target="_blank">Leer en Archive.org (versión bilingüe)</a> | <a href="https://www.amazon.es/Metaf%C3%ADsica-Arist%C3%B3teles/dp/8424939227/" target="_blank">Comprar en Amazon.es</a>
-                </li>
-                <li>
                     <strong>Vidas de los filósofos más ilustres de Diógenes Laercio:</strong> El Libro I está dedicado a Tales y narra anécdotas sobre su vida y resume su pensamiento.
                     <br>
-                    <a href="https://archive.org/details/vidasopinionesys01diog/page/n5/mode/2up" target="_blank">Leer en Archive.org</a> | <a href="https://www.amazon.es/Vidas-opiniones-sentencias-fil%C3%B3sofos-ilustres/dp/8420676963/" target="_blank">Comprar en Amazon.es</a>
+                    <a href="https://archive.org/details/diogenes-laercio.-vidas-y-opiniones-de-los-filosofos-ilustres-ocr-2007/mode/2up" target="_blank">Leer en Archive.org</a> | <a href="https://www.amazon.es/Vidas-opiniones-sentencias-fil%C3%B3sofos-ilustres/dp/8420676963/" target="_blank">Comprar en Amazon.es</a>
                 </li>
                 <li>
                     <strong>Los filósofos presocráticos (Compilación de G.S. Kirk, J.E. Raven y M. Schofield):</strong> Una obra académica esencial que recoge y comenta los fragmentos y testimonios de los presocráticos, incluido Tales.
                     <br>
-                    <a href="https://www.amazon.es/fil%C3%B3sofos-presocr%C3%A1ticos-Historia-cr%C3%ADtica-testimonios/dp/8424935671" target="_blank">Comprar en Amazon.es</a>
+                    <a href="https://archive.org/details/los-filosofos-presocraticos-i-aa-vv/mode/2up" target="_blank">Archive.org</a>
                 </li>
             </ul>
 
