--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <li>
                     <strong>Vidas de los filósofos más ilustres de Diógenes Laercio:</strong> El Libro I está dedicado a Tales y narra anécdotas sobre su vida y resume su pensamiento.
                     <br>
-                    <a href="https://archive.org/details/diogenes-laercio.-vidas-y-opiniones-de-los-filosofos-ilustres-ocr-2007/mode/2up" target="_blank">Leer en Archive.org</a> | <a href="https://www.amazon.es/Vidas-opiniones-sentencias-fil%C3%B3sofos-ilustres/dp/8420676963/" target="_blank">Comprar en Amazon.es</a>
+                    <a href="https://archive.org/details/diogenes-laercio.-vidas-y-opiniones-de-los-filosofos-ilustres-ocr-2007/mode/2up" target="_blank">Leer en Archive.org</a> | 
                 </li>
                 <li>
                     <strong>Los filósofos presocráticos (Compilación de G.S. Kirk, J.E. Raven y M. Schofield):</strong> Una obra académica esencial que recoge y comenta los fragmentos y testimonios de los presocráticos, incluido Tales.
@@ -291,7 +291,7 @@
                 <li>
                     <strong>Stanford Encyclopedia of Philosophy:</strong> Un análisis profundo y riguroso (en inglés).
                     <br>
-                    <a href="https://plato.stanford.edu/entries/thales/" target="_blank">Artículo sobre Thales en la SEP</a>
+                    <a href="https://plato.stanford.edu/entries/presocratics/" target="_blank">Artículo sobre los presocráticos</a>
                 </li>
             </ul>
         </section>
